--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.loopj.android:android-async-http:1.4.6'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-
+    compile 'org.scribe:scribe:1.3.7'
 
 }
